Data Cleaning on outliers CSV Data Set with functional pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
+Breast_cancer_dataset.csv
+
 survey_results_public.csv
 survey_results_schema.csv
 students_dataset.csv
 
 day1_data.csv
+cleaned_day1_data.csv
+
+day2_outlier_dataset.csv
+cleaned_day2_outlier_dataset.csv
