Data Cleaning on outliers CSV sample dirty Data Set with functional pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ cleaned_day1_data.csv
 
 day2_outlier_dataset.csv
 cleaned_day2_outlier_dataset.csv
+
+day3_sample_dirty_dataset.csv
+cleaned_day3_sample_dirty_dataset.csv
