Data Cleaning on raw dataset.csv

--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,18 @@ survey_results_public.csv
 survey_results_schema.csv
 students_dataset.csv
 
+Day32:
 day1_data.csv
 cleaned_day1_data.csv
 
+Day33:
 day2_outlier_dataset.csv
 cleaned_day2_outlier_dataset.csv
 
+Day34:
 day3_sample_dirty_dataset.csv
 cleaned_day3_sample_dirty_dataset.csv
+
+Day35:
+day4_raw_dataset.csv
+cleaned_day4_raw_dataset.csv
